# de_challenge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: action_test.yml
de/: main.py  queries.yaml  utils.py
tests/: test_cases.py
