[project]
name = "de"
version = "1"
description = "Data Engineering Challenge"
authors = [
    {name = "dh.singh"}
]
readme = "README.md"
requires-python = "^3.11"

[project.dependencies]
pyyaml = "^6.0.2"

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
